Corrigindo bug de z-index

--- a/frontend/src/components/Card/styles.module.scss
+++ b/frontend/src/components/Card/styles.module.scss
@@ -99,6 +99,7 @@
 
     .infoModal {
         position: relative;
+        z-index: 999;
 
     }
 }
