--- a/frontend/src/components/CardContainer/styles.module.scss
+++ b/frontend/src/components/CardContainer/styles.module.scss
@@ -32,7 +32,7 @@
             overflow: hidden;
             width: 100%;
             gap: 8px;
-            z-index: 2;
+            //z-index: 2;
         }
 
 
@@ -41,6 +41,7 @@
             border: none;
             padding: 8px 16px;
             cursor: pointer;
+
 
             &:disabled {
                 background-color: transparent;
@@ -57,7 +58,6 @@
             top: 0;
             right: 99%;
             color: white;
-            border-radius: 4px;
             height: 600px;
             margin: 0 0.4rem;
             transition: all 0.2s;
@@ -77,7 +77,7 @@
             height: 600px;
             margin: 0 0.2rem;
             transition: all 0.2s;
-            z-index: 1;
+
 
             &:hover {
                 background-color: #c0c0c0;
